# alarm_clock

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: AI_DESIGN_PLAN.md
src/alarm_clock/: __main__.py  cli.py  models.py  scheduler.py  store.py  time_parser.py
tests/unit/: test_cli.py  test_scheduler.py  test_store.py  test_time_parser.py
